update readme, fix codestyle, fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sex_by_russian_name",
+  "name": "sex-by-russian-name",
   "version": "1.0.0",
   "description": "Detect sex by russian name",
   "repository": "git@github.com:arnidan/sex_by_russian_name.git",
