--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sex-by-russian-name",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Detect sex by russian name",
   "repository": "git@github.com:arnidan/sex_by_russian_name.git",
   "author": "Andrew",
@@ -11,7 +11,9 @@
     "build": "tsc",
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "test": "jest",
-    "test-coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
+    "test-coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "publish": "publish-please",
+    "prepublish": "npm run test && npm run build"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
